--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -41,3 +42,10 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+.idea
+ebin
+*.dump
+*.iml
+out
+.rebar
